# conf42demo

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: bad_code_example.py
presentation/: slides.html
scripts/: demo_webhook.py  index_repos.py  presentation_demo.py  setup.sh
src/: __init__.py  cli.py
src/analyzers/: __init__.py  code_analyzer.py  commit_analyzer.py
src/api/: github_webhook.py
src/estimator/: __init__.py  task_estimator.py
src/reviewer/: __init__.py  code_reviewer.py
src/utils/: llm_client.py
src/validation/: __init__.py  historical_accuracy.py
